--- a/style-desktop.css
+++ b/style-desktop.css
@@ -48,7 +48,7 @@
         color: #fff;
     }
 
-    .arrow__bottom {
+    #mobile__none {
         color: hsl(217, 19%, 35%);
         transform: rotate(180deg);
         position: absolute;
